<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eunice.contactsbook.DetailsFragment">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:useDefaultMargins="true"
        tools:targetApi="ice_cream_sandwich">

        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/label_name"
            style="@style/ContactLabelTextView"
            android:id="@+id/nameLabel"/>
        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/label_phone"
            style="@style/ContactLabelTextView"
            android:id="@+id/phoneLabel"/>
        <TextView
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/label_email"
            style="@style/ContactLabelTextView"
            android:id="@+id/emailLabel"/>
        <TextView
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/label_street"
            style="@style/ContactLabelTextView"
            android:id="@+id/streetLabel"/>
        <TextView
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/label_city"
            style="@style/ContactLabelTextView"
            android:id="@+id/cityLabel"/>
        <TextView
            android:layout_row="5"
            android:layout_column="0"
            android:text="@string/label_state"
            style="@style/ContactLabelTextView"
            android:id="@+id/stateLabel"/>
        <TextView
            android:layout_row="6"
            android:layout_column="0"
            android:text="@string/label_zip"
            style="@style/ContactLabelTextView"
            android:id="@+id/zipLabel"/>

        <TextView
            android:layout_row="0"
            android:layout_column="1"
            style="@style/ContactTextView"
            android:hint="@string/hint_name_required"
            android:id="@+id/nameTextView"/>
        <TextView
            android:layout_row="1"
            android:layout_column="1"
            style="@style/ContactTextView"
            android:hint="@string/hint_phone"
            android:id="@+id/phoneTextView"/>
        <TextView
            android:layout_row="2"
            android:layout_column="1"
            style="@style/ContactTextView"
            android:hint="@string/hint_email"
            android:id="@+id/emailTextView"/>
        <TextView
            android:layout_row="3"
            android:layout_column="1"
            style="@style/ContactTextView"
            android:hint="@string/hint_street"
            android:id="@+id/streetTextView"/>
        <TextView
            android:layout_row="4"
            android:layout_column="1"
            style="@style/ContactTextView"
            android:hint="@string/hint_city"
            android:id="@+id/cityTextView"/>
        <TextView
            android:layout_row="5"
            android:layout_column="1"
            style="@style/ContactTextView"
            android:hint="@string/hint_state"
            android:id="@+id/stateTextView"/>
        <TextView
            android:layout_row="6"
            android:layout_column="1"
            style="@style/ContactTextView"
            android:hint="@string/hint_zip"
            android:id="@+id/zipTextView"/>
    </GridLayout>

</ScrollView>
